# fileFormatter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  project.4coder
buildScripts/: buildConfigure.bat  buildDebug.bat  buildInstall.bat  buildRelease.bat  runInstall.bat
source/: cpp.json  json.hpp  main.cpp  pch.h
